--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router": "^5.1.8",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.3.0",
     "proptypes": "^1.1.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.0",
