--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precodegen": "apollo schema:download --endpoint=http://localhost:4000/graphql",
-    "codegen": "apollo codegen:generate src/types/api.d.ts --includes='./src/**/*.queries.ts' --localSchemaFile=./schema.json --outputFlat --target=typescript"
+    "codegen": "apollo codegen:generate src/types/api.d.ts --includes='./src/**/!(*.local).ts' --localSchemaFile=./schema.json --outputFlat --target=typescript"
   },
   "eslintConfig": {
     "extends": "react-app"
