--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^6.0.8",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.0",
